<resources>
    <string name="app_name">Customer Driven Feedback</string>

    // Login Fragment
    <string name="login_toolbar_title_text">Login</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="sign_up_text">Don\'t have an account?</string>
    <string name="login_button">Login</string>

    // Sign Up Fragment
    <string name="sign_up_toolbar_title_text">Sign up</string>
    <string name="enter_email_text">Enter email</string>
    <string name="enter_password_text">Enter password</string>
    <string name="sign_up_button_text">Sign up</string>

    // All Suggested Features
    <string name="suggested_features_toolbar_title_text">Suggested features</string>

    // Add Features
    <string name="add_feature_toolbar_title_text">Request new feature</string>
    <string name="add_feature_title_text">Enter a short &amp; descriptive title</string>
    <string name="add_feature_description_text">Explain any other details</string>
    <string name="add_feature_button_text">Submit suggestion</string>
</resources>