<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar_view"
        layout="@layout/toolbar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_size"
        android:layout_marginTop="@dimen/default_margin_big_size"
        android:layout_marginEnd="@dimen/default_margin_size"
        android:hint="@string/add_feature_title_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_view">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title_text_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="@dimen/description_layout_input_size"
        android:layout_marginStart="@dimen/default_margin_size"
        android:layout_marginTop="@dimen/default_margin_size"
        android:layout_marginEnd="@dimen/default_margin_size"
        android:hint="@string/add_feature_description_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description_text_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ellipsize="start"
            android:gravity="top"
            android:inputType="textMultiLine" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_size"
        android:layout_marginTop="@dimen/default_margin_big_size"
        android:layout_marginEnd="@dimen/default_margin_size"
        android:text="@string/add_feature_button_text"
        app:layout_constraintTop_toBottomOf="@+id/description_text_input_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>